--- a/.github/workflows/update-wiki.yaml
+++ b/.github/workflows/update-wiki.yaml
@@ -34,6 +34,7 @@ jobs:
           repository: ${{github.repository}}.wiki
           # github_token: ${{ secrets.GITHUB_TOKEN }}
           # path: markdown
+      - run: echo "The merged key status right before we mess with the wiki is ${{ github.event.pull_request.merged }}"
       - name: Make changes
         run: |
             echo "I should only see this if the PR was merged" >> changelog.md
