--- a/.github/workflows/update-wiki.yaml
+++ b/.github/workflows/update-wiki.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: Make changes
         run: |
             echo "I should only see this if the PR was merged" >> changelog.md
-        if: github.event.pull_request.merged == 'true' 
+        if: github.event.pull_request.merged 
       - name: Push to wiki
         run: |
           git config --local user.email "action@github.com"
